--- a/.travis.yml
+++ b/.travis.yml
@@ -52,14 +52,12 @@ script:
   - if [[ ! -e ${ELASTIX_BUILD_DIR}/src/UseElastix.cmake ]]; then
       rm -rf ${ELASTIX_SOURCE_DIR} ${ELASTIX_BUILD_DIR} &&
       git clone ${ELASTIX_URL} ${ELASTIX_SOURCE_DIR} &&
-      cd ${ELASTIX_SOURCE_DIR}
+      cd ${ELASTIX_SOURCE_DIR} &&
       git checkout ef057ff89233822b26b04b31c3c043af57d5deff &&
-      mkdir -p ${ELASTIX_BUILD_DIR}
+      mkdir -p ${ELASTIX_BUILD_DIR} &&
       cd ${ELASTIX_BUILD_DIR} &&
       cmake -DBUILD_TESTING:BOOL=OFF -DELASTIX_BUILD_EXECUTABLE:BOOL=OFF -DITK_DIR=${ITK_BUILD_DIR} -DCMAKE_BUILD_TYPE=Release ${ELASTIX_SOURCE_DIR} &&
       make --jobs=4; fi
-  - ls -larsh ${ELASTIX_BUILD_DIR}
-  - ls -larsh ${ELASTIX_BUILD_DIR}/src
   - cd ${SIMPLEELASTIX_BUILD_DIR}
   - cmake -DWRAP_LUA:BOOL=OFF -DWRAP_PYTHON:BOOL=OFF -DWRAP_JAVA:BOOL=OFF -DWRAP_CSHARP:BOOL=OFF -DWRAP_TCL:BOOL=OFF -DWRAP_R:BOOL=OFF -DWRAP_RUBY:BOOL=OFF -DBUILD_EXAMPLES:BOOL=ON -DBUILD_TESTING:BOOL=OFF -DCMAKE_CXX_FLAGS=-w -DCMAKE_C_FLAGS=-w -DCMAKE_BUILD_TYPE=Release -DSimpleITK_USE_SYSTEM_ITK:BOOL=ON -DITK_DIR=${ITK_BUILD_DIR} -DSimpleITK_USE_SYSTEM_ELASTIX:BOOL=ON -DELASTIX_DIR=${ELASTIX_BUILD_DIR} ${SIMPLEELASTIX_SOURCE_DIR}
   - make --jobs=4
