--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ script:
       git checkout v4.11.1 &&
       mkdir -p ${ITK_BUILD_DIR} &&
       cd ${ITK_BUILD_DIR} &&
-      cmake -DModule_ITKCommon:BOOL=ON -DModule_DisplacementField:BOOL=ON -DModule_ITKIOGDCM:BOOL=ON -DModule_ITKIOImageBase:BOOL=ON -DModule_ITKIOTransformBase:BOOL=ON -DModule_ITKImageCompose:BOOL=ON -DModule_ITKImageIntensity:BOOL=ON -DModule_ITKLabelMap:BOOL=ON -DModule_ITKMetricsv4:BOOL=ON -DModule_ITKOptimizersv4:BOOL=ON -DModule_ITKRegistrationMethodsv4:BOOL=ON -DModule_ITKTransform:BOOL=ON -DBUILD_EXAMPLES=OFF -DBUILD_TESTING=OFF -DCMAKE_BUILD_TYPE=Release ${ITK_SOURCE_DIR} &&
+      cmake -DBUILD_EXAMPLES=OFF -DBUILD_TESTING=OFF -DCMAKE_BUILD_TYPE=Release   -DCMAKE_POSITION_INDEPENDENT_CODE:BOOL=ON -DCMAKE_VISIBILITY_INLINES_HIDDEN:BOOL=ON -DBUILD_SHARED_LIBS:BOOL=OFF -DCMAKE_SKIP_RPATH:BOOL=ON -DITK_LEGACY_REMOVE:BOOL=ON -DITK_USE_KWSTYLE:BOOL=OFF -DITK_BUILD_DEFAULT_MODULES:BOOL=ON -DModule_ITKReview:BOOL=ON ${ITK_SOURCE_DIR} &&
       make --jobs=4; fi
   - if [[ ! -e ${ELASTIX_BUILD_DIR}/src/UseElastix.cmake ]]; then
       rm -rf ${ELASTIX_SOURCE_DIR} ${ELASTIX_BUILD_DIR} &&
